force-app/main/default/objects/Pokemon__c/fields/Back_Image__c.field-meta.xml
<CustomField>
    <fullName>Back_Image__c</fullName>
    <formula>IMAGE( Back_Image_URL__c , &quot;Back Image&quot; , 300, 300)</formula>
    <label>Back Image</label>
    <type>Text</type>
</CustomField>