force-app/main/default/objects/Pokemon__c/fields/Back_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Back_Image_URL__c</fullName>
    <label>Back Image URL</label>
    <type>Url</type>
</CustomField>