force-app/main/default/objects/Pokemon__c/fields/Defense__c.field-meta.xml
<CustomField>
    <fullName>Defense__c</fullName>
    <label>Defense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>