force-app/main/default/objects/Pokemon__c/fields/Front_Image__c.field-meta.xml
<CustomField>
    <fullName>Front_Image__c</fullName>
    <formula>IMAGE(  Front_Image_URL__c , &apos;Front Image&apos; , 300, 300)</formula>
    <label>Front Image</label>
    <type>Text</type>
</CustomField>