force-app/main/default/objects/Pokemon__c/fields/Front_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Front_Image_URL__c</fullName>
    <label>Front Image URL</label>
    <type>Url</type>
</CustomField>