force-app/main/default/objects/Pokemon__c/fields/Number_of_Abilities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Abilities__c</fullName>
    <label>Number of Abilities</label>
    <summaryForeignKey>Pokemon_Ability__c.Pokemon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>