force-app/main/default/objects/Pokemon__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <formula>IF(Weight__c &lt; 20, &quot;Tiny&quot;,
   IF(Weight__c &lt; 300, &quot;Small&quot;,
      IF(Weight__c &lt; 600, &quot;Big&quot;,
         &quot;Super Big&quot;
      )
   )
)</formula>
    <label>Size</label>
    <type>Text</type>
</CustomField>