force-app/main/default/objects/Pokemon__c/fields/Special_Attack__c.field-meta.xml
<CustomField>
    <fullName>Special_Attack__c</fullName>
    <label>Special-Attack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>