force-app/main/default/objects/Pokemon__c/listViews/Complete_Data.listView-meta.xml
<ListView>
    <fullName>Complete_Data</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Front_Image__c</columns>
    <columns>Attack__c</columns>
    <columns>Defense__c</columns>
    <columns>Hp__c</columns>
    <columns>Weight__c</columns>
    <columns>Speed__c</columns>
    <filterScope>Mine</filterScope>
    <label>Complete Data</label>
</ListView>