force-app/main/default/objects/Pokemon__c/listViews/Order_by_createdDate.listView-meta.xml
<ListView>
    <fullName>Order_by_createdDate</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Order by createdDate</label>
</ListView>